# niftigl

./: .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
include/: niftigl.h  niftigl.hpp
src/: niftigl.c  niftigl.cpp
